--- a/example/content/japan_birth.mdx
+++ b/example/content/japan_birth.mdx
@@ -1,6 +1,6 @@
 ---
 title: Japan Birth Example
-layout: landscape
+layout: portrait
 sql:
     japan_birth:
         content:
@@ -12,13 +12,16 @@ sql:
                 birth_male / NULLIF(birth_total,0) as '男性比率',
             FROM japan_birth 
             ORDER BY year
+chart:
+    japan_birth:
+        x: 年
+        y: [男性, 女性]
+        stack: true
 ---
 
 ## 日本の出生数
 
 <BarChart
-    x='年'
-    y={['男性','女性']}
-    stack
-    {...data.japan_birth}
+    {...frontmatter.chart.japan_birth}
+    {...props.data.japan_birth}
 />
